2014-04-11  Tobias Burnus  <burnus@net-b.de>

	PR other/59055
	* doc/bugreport.texi (Bugs): Remove nodes pointing to the
	nirvana.
	* doc/gcc.texi (Service): Update description in the @menu
	* doc/invoke.texi (Option Summary): Remove misplaced and
	duplicated @menu.

2014-04-11  Steve Ellcey  <sellcey@mips.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/60556
	* expr.c (convert_move): Use emit_store_flag_force instead of
	emit_store_flag.  Pass lowpart_mode instead of VOIDmode as 5th
	argument to it.

2014-04-11  Richard Biener  <rguenther@suse.de>

	PR middle-end/60797
	* varasm.c (assemble_alias): Avoid endless error reporting
	recursion by setting TREE_ASM_WRITTEN.

2014-04-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md: Add a splitter for NOT rtx.

2014-04-11  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/60663
	* cse.c (cse_insn): Set src_volatile on ASM_OPERANDS in
	PARALLEL.

2014-04-10  Jan Hubicka  <hubicka@ucw.cz>
	    Jakub Jelinek  <jakub@redhat.com>

	PR lto/60567
	* ipa.c (function_and_variable_visibility): Copy forced_by_abi flag from
	decl_node to node.

2014-04-10  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR debug/60655
	* config/arm/arm.c (TARGET_CONST_NOT_OK_FOR_DEBUG_P): Define
	(arm_const_not_ok_for_debug_p): Reject MINUS with SYM_REF's
	ameliorating the cases where it can be.

2014-04-09  David Edelsohn  <dje.gcc@gmail.com>

	Revert
	2014-04-08  Pat Haugen  <pthaugen@us.ibm.com>

	* config/rs6000/sync.md (AINT mode_iterator): Move definition.
	(loadsync_<mode>): Change mode.
	(load_quadpti, store_quadpti): New.
	(atomic_load<mode>, atomic_store<mode>): Add support for TI mode.
	* config/rs6000/rs6000.md (unspec enum): Add UNSPEC_LSQ.
	* config/rs6000/predicates.md (quad_memory_operand): !TARGET_SYNC_TI.

2014-04-09  Cong Hou  <congh@google.com>

	PR testsuite/60773
	* doc/sourcebuild.texi (vect_widen_mult_si_to_di_pattern): Add
	documentation.
