@@ -1,3 +1,7 @@
+2015-02-24  Hesham ALMatary  <heshamelmatary@gmail.com>
+
+	* config.host: Add Epiphany RTEMS target.
+
 2014-03-27  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* config.host: Append t-floattodi to tmake_file depending on
